tests/rosetta/out/Java/99-bottles-of-beer.error
javac error: exit status 1
/tmp/TestMochiToJava99-bottles-of-beer3524644837/001/99BottlesOfBeer.java:3: error: <identifier> expected
public class 99BottlesOfBeer {
            ^
1 error
